--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="Film.html"><li>Film</li></a>
                 <a href="cannon80d.html"><li>Cannon80D</li></a>
                 <a href="a3400is.html"><li>a3400is</li></a>
+                <a href="chat.html"><li>chat</li></a>
 <!--                <li>iPhone</li>-->
                 <a href="https://weibo.com/u/6696873650" target="_blank">@weibo</a>
             </ul>
